Calculate car activity stats. DAT-2436
